[tool.poetry]
name = "aioarangodb"
version = "0.1.0"
description = ""
authors = ["sumit <sharansumitkumar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
PyJWT = "^2.3.0"
six = "^1.16.0"
aiohttp-retry = "^2.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
